Fixed about-view spacing and centering.

--- a/epic/test-layout/css/style.css
+++ b/epic/test-layout/css/style.css
@@ -117,3 +117,5 @@ ___________________________________________________________ */
 .links img{
 	max-height: 80px;
 }
+.img-centered {margin:0 auto;
+}
